# CLI_Calculator

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test_calculator.yml
calculator/: calculator.py
test/: test_helper_functions.py
test/helper_functions/: test_helper_functions.py
test/test_calculate/: test_addition.py  test_combinations.py  test_division.py  test_error_handling.py  test_exponentials.py  test_last_result.py  test_modulo.py  test_multiplication.py  test_parenthesis_expressions.py  test_substraction.py  test_variables.py  test_variables_constants.py
test/test_menu/: test_clean_history.py  test_clean_variables.py  test_delete_variable.py  test_get_constants.py  test_get_history.py  test_get_variables.py  test_set_variable.py
