[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator"
version = "0.0.2"
description = "Hello CLI"
requires-python = ">=3.14"
dependencies = [
    "click>=8.4",
]

[project.scripts]
calculator = "calculator.calculator:cli"

[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "--import-mode=importlib",]
pythonpath = ["test/helper_functions", "calculator"]
testpaths = ["test"]
